// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalLink test  should render component with open-in-new window icon class 1`] = `
<a
  className=" undefined"
  href="www.google.com"
  rel="noopener noreferrer"
  tabIndex="0"
  target="_blank"
  text="Google"
  title="Link to www.google.com will open in a new window."
>
  <Memo(ForwardRef(OpenInNewIcon)) />
</a>
`;

exports[`ExternalLink test  should render component without open-in-new window icon 1`] = `
<a
  className=" undefined"
  href="www.google.com"
  rel="noopener noreferrer"
  tabIndex="0"
  target="_blank"
  text="Google"
/>
`;
